--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,4 +1,23 @@
 {
   "home.input.placeholder": "Inserisci codice mostra",
-  "home.page.description": "La tua audioguida personale per mostre ed esibizioni"
+  "home.page.description": "La tua audioguida personale per mostre ed esibizioni",
+  "exhibition.name": "Chiostro del Bramante",
+  "audioguide.exhibition.title": "A visual protest",
+  "audioguide.exhibition.description": "Da Love is in the Air a Girl with Balloon; da Queen Vic a Napalm, da Toxic Mary a HMV, dalle stampe  realizzate per Barely Legal, una delle più note mostre realizzate, ai progetti discografici per le copertine di vinili e CD.",
+  "exhibition.list.label": "ELEMENTI NELLA MOSTRA",
+  "exhibition.language.toolbar": "Impostazioni mostra",
+  "exhibition.language.title": "Lingua audioguida",
+  "exhibition.language.description": "L’audioguida della mostra con approfondimenti e descrizioni verranno proposti nella lingua selezionata",
+  "lang.it": "Italiano",
+  "lang.en": "Inglese",
+  "exhibition.search.toolbar": "Cerca elemento",
+  "exhibition.input.placeholder": "Nome o codice elemento",
+  "audioguide.element.baloon.name": "Bambina e palloncino",
+  "audioguide.element.baloon.description": "L’opera rappresenta una bambina con un palloncino rosso a forma di cuore e nasce come un murales di Bansky a Londra, risalente al 2002 ed è uno dei suoi graffiti più famosi, il cui nome originale resta ancora un mistero, anche se recenti investigazioni attribuirebbero all’artista l’identità di Robert Gunningham",
+  "element.nextElement.label": "SUCESSIVO",
+  "element.prevElement.label": "PRECEDENTE",
+  "audioguide.element.labour.name": "Il lavoro degli schiavi",
+  "audioguide.element.labour.description": "Schiavo del lavoro è un murale che è stato dipinto da un artista di graffiti britannico, Banksy , sulla parete laterale di un Poundland negozio a Wood Green , Londra nel maggio 2012. L'opera è 48.03 pollici (122 cm) di altezza da 59.84 pollici (152cm) di larghezza, e raffigura un bambino riccio in una macchina da cucire l'assemblaggio di un pavese di Union Jack patch.",
+  "audioguide.element.antiracism.name": "Piccioni razzisti",
+  "audioguide.element.antiracism.description": "Un murale di Banksy, probabilmente del valore di migliaia di sterline, è stato cancellato dal consiglio comunale di un paesino dell’Essex, dopo averlo reputato “razzista”.  L’opera d’arte, che mostra un gruppo di piccioni con degli striscioni anti-immigrazione (“Gli immigrati non sono benvenuti” e “Tornate in Africa”), era apparsa la notte di martedì scorso a Clacton-on-Sea."
 }
